--- a/src/components/button/EllipseButton.css
+++ b/src/components/button/EllipseButton.css
@@ -1,6 +1,6 @@
 .ellipse-button {
-    height: 50px;
-    width: 100px;
+    height: 5vw;
+    width: 10vw;
     margin: 2px;
     color: #ffffff;
     text-align: center;
