--- a/src/components/button/RoundButton.css
+++ b/src/components/button/RoundButton.css
@@ -1,6 +1,6 @@
 .round-button {
-    height: 50px;
-    width: 50px;
+    height: 5vw;
+    width: 5vw;
     margin: 2px;
     color: #ffffff;
     text-align: center;
