--- a/src/components/input/CalcInput.css
+++ b/src/components/input/CalcInput.css
@@ -1,7 +1,6 @@
 .calc-input {
-    width: 25vw;
-    min-width: 180px;
-    height: 50px;
+    width: 21vw;
+    height: 6vw;
     margin: 20px 10px;
     padding: 10px;
     background: #ffffff;
